chore: fix DevTools failed to load content

--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,8 @@
   </head>
   <body>
     <script src="slide-unlock.umd.js"></script>
+    <script>
+      new SlideUnlock().init()
+    </script>
   </body>
 </html>
