feat: adjust successful callback and default style prefix

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,7 @@
 
     <script src="slide-unlock.umd.js"></script>
     <script>
-      const slideUnlock = new SlideUnlock({
-        prefix: 'ks',
-      });
+      const slideUnlock = new SlideUnlock();
 
       slideUnlock.init();
       slideUnlock.mount(app);
